Añadi el titulo nuevo

--- a/calculator.html
+++ b/calculator.html
@@ -16,7 +16,7 @@ function square(){
 </script>
 </head>
 <body>
-<h1>para Cal_l</h1>
+<h1>Mi calculador pero ahora de Cal_2</h1>
     Number:
     <input type="text" id="n1" onclick="empty()">
     <br>
